feat: stats api + improvements
